# grok-build-hardened

./: CONTRIBUTING.md  Cargo.toml  HARDENING.md  README.md  SECURITY.md  deny.toml
crates/codegen/xai-chat-state/: Cargo.toml
crates/codegen/xai-chat-state/src/: lib.rs
crates/codegen/xai-chat-state/tests/: agent_smuggle_key_message.rs  model_bound_assembly.rs
crates/codegen/xai-grok-agent/: Cargo.toml
crates/codegen/xai-grok-hooks/: Cargo.toml
crates/codegen/xai-grok-input-sanitize/: Cargo.toml
crates/codegen/xai-grok-input-sanitize/src/: analyze.rs  analyze_image.rs  category.rs  classify.rs  config.rs  lib.rs  model_bound.rs  note.rs  policy.rs  sanitize.rs  untrusted.rs
crates/codegen/xai-grok-input-sanitize/tests/: adversarial.rs  smuggle_key_message.rs
crates/codegen/xai-grok-pager/: Cargo.toml
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager-pty-harness/src/: lib.rs  pty.rs
crates/codegen/xai-grok-pager/src/: headless.rs  lib.rs
crates/codegen/xai-grok-pager/tests/: settings_e2e.rs
crates/codegen/xai-grok-sampler/: Cargo.toml
crates/codegen/xai-grok-sampler/src/: client.rs
crates/codegen/xai-grok-shared/src/: ui_config.rs
crates/codegen/xai-grok-shell/: Cargo.toml
crates/codegen/xai-grok-tools/: Cargo.toml
crates/codegen/xai-grok-tools/tests/: skill_smuggle_key_message.rs
crates/common/xai-computer-hub-core/src/: resolver.rs
crates/common/xai-tool-runtime/: Cargo.toml
crates/common/xai-tool-runtime/src/: lib.rs  render.rs  tool.rs
examples/: hardened-sandbox.toml
(+44 files in other folders)
